Stop two lookups reporting a null their callers cannot get
JitTypeDesc.getJavaPrimitive returned null for a type with no primitive
carrier, which six of its callers had already ruled out with
isJavaPrimitive() and answered for with "assert cd != null". Split the same
way getPrimitiveFieldClass was: findJavaPrimitive keeps the nullable
contract for the callers that mean it, getJavaPrimitive throws instead.

Two of those callers did mean it and are repointed at the nullable form -
getNullablePrimitiveClass, whose own javadoc promises null for a nullable
non-primitive, and getXvmPrimitiveClasses, which null-checks on the
following line. Missing either would have turned a documented null into a
thrown exception at run time, which is the kind of change a compile does
not catch.

Its unreachable default arm now throws too: isJavaPrimitive() and this
switch list the same 18 names, and saying so beats returning null for a
case that cannot arise.

CommonBuilder called getMethodBySignature and dereferenced the result
immediately in nine places - a Const always has equals, compare, hashCode,
appendTo and estimateStringLength, but nothing said so, and every one of
those sites read as a possible NPE. requireMethod states the requirement
once and names the type and signature if it is ever not met. The tenth
caller genuinely handles a missing method and is left alone.

Also carries editor changes: get(0) to getFirst(), a raw Class to Class<?>,
a javadoc continuation, and a dead import.

(cherry picked from commit 8f9c57901e3f5bdcd77533df2a94ae69d7d6791c)